--- a/property-pulse/package.json
+++ b/property-pulse/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "cloudinary": "^2.0.1",
     "mapbox-gl": "^3.1.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1",
-    "next": "14.1.0",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.4",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "photoswipe": "^5.4.3",
     "react": "^18",
