--- a/property-pulse/package.json
+++ b/property-pulse/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "cloudinary": "^2.0.1",
     "mapbox-gl": "^3.1.2",
     "mongodb": "^6.6.1",
